--- a/package.json
+++ b/package.json
@@ -6,23 +6,21 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "lint:fix": "eslint --fix"
   },
   "dependencies": {
     "next": "16.0.0",
     "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "sass": "^1.93.2",
-    "swiper": "^12.0.3"
+    "react-dom": "19.2.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
-    "tailwindcss": "^4",
+    "sass": "^1.93.2",
     "typescript": "^5"
   }
 }
