--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "sharp": "^0.34.4",
     "swiper": "^12.0.3"
   },
   "devDependencies": {
