--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "lint:fix": "eslint --fix"
   },
   "dependencies": {
+    "@fancyapps/ui": "^6.1.0",
     "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-icons": "^5.5.0",
     "sharp": "^0.34.4",
     "swiper": "^12.0.3"
   },
