--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fancyapps/ui": "^6.1.0",
+    "@heroui/select": "^2.4.28",
     "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
