--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   },
   "dependencies": {
     "@fancyapps/ui": "^6.1.0",
-    "@heroui/select": "^2.4.28",
     "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
+    "react-select": "^5.10.2",
     "sharp": "^0.34.4",
     "swiper": "^12.0.3"
   },
