--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,27 @@
 {
-  "semi": true,
-  "singleQuote": false,
-  "trailingComma": "all",
-  "printWidth": 100,
-  "tabWidth": 4,
-  "endOfLine": "auto"
+    "arrowParens": "always",
+    "singleQuote": false,
+    "semi": true,
+    "tabWidth": 4,
+    "trailingComma": "all",
+    "bracketSpacing": true,
+    "endOfLine": "auto",
+    "jsxSingleQuote": false,
+    "useTabs": true,
+    "printWidth": 100,
+    "singleAttributePerLine": false,
+    "useEditorConfig": false,
+    "htmlWhitespaceSensitivity": "ignore",
+    "importOrder": [
+        "<THIRD_PARTY_MODULES>",
+        "^react",
+        "^next",
+        "^@/src/(.*)$",
+        "^(?!.*\\.scss$)(../.*)$",
+        "^(?!.*\\.scss$)(./.*)$",
+        ".*\\.scss$"
+    ],
+    "importOrderSeparation": true,
+    "importOrderSortSpecifiers": true,
+    "plugins": ["@trivago/prettier-plugin-sort-imports"]
 }
