--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@fancyapps/ui": "^6.1.0",
+    "@trivago/prettier-plugin-sort-imports": "^6.0.0",
     "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
